fixing overlap of coming soon text on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -737,7 +737,7 @@ a:hover {
 
 	.coming-soon {
 		position: fixed;
-		bottom: 10px;
+		bottom: 2px;
 		width: 100%;
 		display: block;
 		color: blue;
